fixed scroll on small screens

--- a/css/style.scss
+++ b/css/style.scss
@@ -221,7 +221,9 @@ $SPECIAL_GREY:#EAEAEA;
 }
 @media(max-width: 600px) {
   .header__menu {
-    position: absolute;
+    // position: absolute;
+    position: fixed;
+     z-index: 99;
     top: 0;
     right: 0;
     background: $BASIC_GREEN;
@@ -240,6 +242,8 @@ $SPECIAL_GREY:#EAEAEA;
     align-items: baseline;
   }
   .burger {
+    position: fixed;
+    right: 15px;
     z-index: 100;
     display: flex;
   }
